--- a/WeChat/app.json
+++ b/WeChat/app.json
@@ -1,10 +1,12 @@
 {
   "pages": [
+    "pages/poster/poster",
     "pages/board/board",
     "pages/search/search",
     "pages/profile/profile",
     "pages/list/list",
     "pages/item/item"
+    
   ],
   "window": {
     "navigationBarBackgroundColor": "#34568e",
@@ -20,22 +22,17 @@
     "list": [
       {
         "text": "榜单",
-        "pagePath": "pages/board/board",
-        "iconPath": "images/board.png",
-        "selectedIconPath": "images/board-actived.png"
+        "pagePath": "pages/board/board"
       },
       {
         "text": "搜索",
-        "pagePath": "pages/search/search",
-        "iconPath": "images/search.png",
-        "selectedIconPath": "images/search-actived.png"
+        "pagePath": "pages/search/search"
       },
       {
-        "text": "我的",
-        "pagePath": "pages/profile/profile",
-        "iconPath": "images/profile.png",
-        "selectedIconPath": "images/profile-actived.png"
+        "text": "生成海报",
+        "pagePath": "pages/poster/poster"
       }
     ]
-  }
+  },
+  "sitemapLocation": "sitemap.json"
 }
